<resources>
    <string name="app_name">Alcohol Counter</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">Quantity</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="nameOptional">Name (optional)</string>
    <string name="pick_date">Pick Date</string>
    <string name="selected_date">No date selected</string>
    <string name="unit">Unit</string>
    <string name="mug">Mug (5dl)</string>
    <string name="glass">Glass (2dl)</string>
    <string name="bottle">Bottle (7.5dl)</string>
    <string name="alcohol_degrees">Alcohol degrees</string>
    <string name="beer">Beer</string>
    <string name="drinks">Drinks</string>
    <string name="delete_btn">deleteBtn</string>
    <string name="smallBeer">Small Beer (3.33dl)</string>
    <string name="dot">.</string>
    <string name="percentage">%</string>

    <string-array name="unit_picker">
        <item>ml</item>
        <item>cl</item>
        <item>dl</item>
        <item>l</item>
        <item>@string/glass</item>
        <item>@string/smallBeer</item>
        <item>@string/mug</item>
        <item>@string/bottle</item>
    </string-array>
</resources>
